# Cascade

./: CMakeLists.txt  README.md  main_cascade.cpp  utils.cpp
cmake_modules/: FindNite2.cmake
data/: calibration.yaml  config.txt
include/: NiteSampleUtilities.h  UDPClient.hpp  calibration.h  coordinates_mapper.h  utils.h
src/: calibration.cpp  coordinates_mapper.cpp  main_cascade  main_cascade.cpp  main_watchdog.cpp  utils.cpp
